--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
-  </head>
-  <body>
+ 
+<%# views/index.ejs %>
+ <% extend('layout') %>
     <section class="hero is-fullheight is-primary">
       <div class="hero-body">
         <div class="container has-text-centered">
@@ -15,5 +10,4 @@
         </div>
       </div>
     </section>
-  </body>
-</html>
+
