--- a/views/sign-in.ejs
+++ b/views/sign-in.ejs
@@ -15,9 +15,9 @@
               </figure>
               <form id="mForm" method="POST" action="/sign-in" enctype="application/json">
                 <div class="field">
-                  <label class="label has-text-left">Email</label>
+                  <label class="label has-text-left">Username</label>
                   <div class="control">
-                    <input name="email" class="input is-large" type="email" placeholder="your email" autofocus="" />
+                    <input name="username" class="input is-large" type="text" placeholder="your username" autofocus="" />
                   </div>
                 </div>
                 <div class="field">
