beginning view profile

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,10 @@
- 
 <%# views/index.ejs %>
- <% extend('layout') %>
-    <section class="hero is-fullheight is-primary">
+  <% extend('layout') %>
+    <!-- Hero content: will be in the middle -->
+    <section class="hero is-fullheight">
       <div class="hero-body">
         <div class="container has-text-centered">
-          <h3 class="title is-2">
-            Hey! <%= count %>
-          </h3>
+          <img src="./img/ultranet-logo.png" alt="ultranet logo">
         </div>
       </div>
     </section>
-
