--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,38 +10,41 @@
   </head>
 
   <body>
-    <div class="navbar-item">
-
-      <div class="field is-grouped">
-        <p class="control">
-          <a class="button" href="/">
-
-            <img src="https://bulma.io/images/bulma-logo.png" alt="Bulma: a modern CSS framework based on Flexbox" width="112" height="28">
-
-          </a>
-        </p>
-        <p class="control">
-          <a class="button" href="/sign-up">
-            <span>Sign up</span>
-          </a>
-        </p>
-        <p class="control">
-          <a class="button" href="/sign-in">
-            <span>Sign in</span>
-          </a>
-        </p>
-        <p class="control">
-          <a class="button" href="#">
-            <span>Users</span>
-          </a>
-        </p>
-        <p class="control">
-          <a class="button is-primary" href="/modules">
-            <span>Module</span>
-          </a>
-        </p>
+    <nav class="navbar is-fixed-top is-light">
+      <div class="navbar-item">
+        <div class="field is-grouped">
+          <p class="control">
+            <a class="button" href="/">
+              <span class="icon is-small"><i class="mdi mdi-home"></i></span><span>Home</span>
+            </a>
+          </p>
+          <p class="control">
+            <a class="button" href="/sign-up">
+              <span>Sign up</span>
+            </a>
+          </p>
+          <p class="control">
+            <a class="button" href="/sign-in">
+              <span>Sign in</span>
+            </a>
+          </p>
+          <p class="control">
+            <a class="button" href="#">
+              <span>Users</span>
+            </a>
+          </p>
+          <p class="control">
+            <a class="button" href="/modules">
+              <span>Module</span>
+            </a>
+          </p>
+          <p class="control">
+            <a class="button" href="/profile">
+              <span>Profile</span>
+            </a>
+          </p>
+        </div>
       </div>
-    </div>
     </nav>
     <%- content %>
   </body>
