--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,3 +8,14 @@
         </div>
       </div>
     </section>
+    <footer class="footer is-fixed-bottom">
+      <div class="container">
+        <div class="content has-text-centered">
+          <p>
+            Registered users:
+            <%= count %>
+          </p>
+          <p><span class="icon is-small"><i class="mdi mdi-copyright"></i></span><span> Ultranet - 2017 | All right reserved</span></p>
+        </div>
+      </div>
+    </footer>
