--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,2 +1,8 @@
 <% extend('layout') %>
-  <h1 class="title">Profile</h1>
+  <section class="hero is-medium is-primary">
+    <div class="hero-body">
+      <div class="container">
+        <h1 class="title">Profile</h1>
+      </div>
+    </div>
+  </section>
